2011-07-18  Nick Alcock  <nick.alcock@oracle.com>

	Testsuite remodel.

	* demo/*: Rename to...
	* test/*: ... this.

	* runtest.sh: Migrate dt_flag setting out of this file:
	make data-driven, from the .d files themselves.
	Drop hardwired dtrace -e -p $pid-without-.d-file
	invocation of dtrace when regression testing was off.

	* test/buf/ring.d: Migrate options from runtest.sh.
	* test/intro/rwtime.d: Likewise.
	* test/intro/trussrw.d: Likewise.
	* test/profile/profpri.d: Likewise.
	* test/sched/pritime.d: Likewise.
	* test/sched/whererun.d: Likewise.
	* test/struct/rwinfo.d: Likewise.
	* test/user/badopen.d: Likewise.
	* test/user/errorpath.d: Likewise.
	* test/user/libc.d: Likewise.
	* test/user/userfunc.d: Likewise.
	* test/struct/kstat.d: Likewise (using -override).

	* test/script/tracewrite.d: Likewise. Move #! line to the right
	place.
	* test/script/interp.d: Move #! line to the right place.
	* test/spec/specopen.d: Likewise.

2011-07-15  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Turn off coverage analysis if no info is present.
	Use the absence of .gcno files as proof of this before the run,
	and .gcda afterwards.

2011-07-14  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Add kernel testing support. Eliminate
	extraneous output on stdout. Move all coverage testing info
	into one directory under build-*/ or the kernel build tree.
	* runtest.conf.example: New, configuration file for runtest.

2011-07-14  Nick Alcock  <nick.alcock@oracle.com>

	Test coverage.

	* GNUmakefile (LDFLAGS): New.
	Include Makeoptions for option processing.
	* Makeoptions: New, provide debugging and test coverage support.
	* runtest.sh: Automatically run lcov to generate HTML coverage
	info if coverage statistics are available.

2011-07-14  Shujing Zhao  <pearly.zhao@oracle.com>

	* uts/common/sys/dtrace.h (dtrace_difo_t): Add a member
	orig_dtdo_rtype to track the return type.
	* libdtrace/dt_as.c (dt_as): Keep the return type.