@@ -1,3 +1,7 @@
+2011-07-28  Shujing Zhao  <pearly.zhao@oracle.com>
+
+	* test/dt_test/fired.d: New test case to test dt_test.
+
 2011-07-18  Nick Alcock  <nick.alcock@oracle.com>
 
 	Testsuite remodel.
